gpu/command_buffer/client/query_tracker.h
@@ -121,6 +121,7 @@ class GLES2_IMPL_EXPORT QueryTracker {
     };
 
     Query(GLuint id, GLenum target, const QuerySyncManager::QueryInfo& info);
+    ~Query();
 
     GLenum target() const {
       return target_;
@@ -173,6 +174,8 @@ class GLES2_IMPL_EXPORT QueryTracker {
 
     uint64_t GetResult() const;
 
+    void SetCompletedCallback(base::OnceClosure callback);
+
    private:
     friend class QueryTracker;
     friend class QueryTrackerTest;
@@ -189,6 +192,8 @@ class GLES2_IMPL_EXPORT QueryTracker {
     uint32_t flush_count_;
     uint64_t client_begin_time_us_;  // Only used for latency query target.
     uint64_t result_;
+
+    base::Optional<base::OnceClosure> on_completed_callback_;
   };
 
   explicit QueryTracker(MappedMemoryManager* manager);
